welcome.lessons.welcome.array.arraycount9.ArrayCount9.scala.error
arrayCount9:1: error: type mismatch;
 found   : Unit
 required: Int
def arrayCount9(nums:Array[Int]): Int = {
                                        ^